@@ -11,6 +11,8 @@ TOOLKIT
   's3service.s3-endpoint-http-port' and
   's3service.s3-endpoint-https-port' are no longer ignored when
   generating signed or torrent URLs.
+- Bash shell scripts now support cygwin by automatically
+  converting classpaths to Windows format.
 
 KUDOS TO:
 
